--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${DB_PASSWORD}
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
