mundando os properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-# Configurações do PostgreSQL (perfil 'prod')
-# Usaremos variáveis de ambiente no Render para preencher estes valores
+# Configuracoes do PostgreSQL (perfil 'prod')
+# Usaremos varaveis de ambiente no Render para preencher estes valores
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
